--- a/home.html
+++ b/home.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/template.css" type="text/css">
-    <link rel="stylesheet" href="css/menuhamburguer.css" type="text/css">
-    <link rel="stylesheet" href="css/home.css" type="text/css">
-    <link rel="stylesheet" href="css/preloader.css" type="text/css">
+    <link rel="stylesheet" href="Css/menuhamburguer.css" type="text/css">
+    <link rel="stylesheet" href="Css/home.css" type="text/css">
+    <link rel="stylesheet" href="Css/preloader.css" type="text/css">
 
     <link rel="shortcut icon" href="imgs/toyota-prata.png" type="image/x-icon"> 
     <title>Home - Toyota</title>
