--- a/desafio.html
+++ b/desafio.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/template.css" type="text/css">
-    <link rel="stylesheet" href="css/menuhamburguer.css" type="text/css">
-    <link rel="stylesheet" href="css/home.css" type="text/css">
-    <link rel="stylesheet" href="css/desafio.css">
+    <link rel="stylesheet" href="Css/template.css" type="text/css">
+    <link rel="stylesheet" href="Css/menuhamburguer.css" type="text/css">
+    <link rel="stylesheet" href="Css/home.css" type="text/css">
+    <link rel="stylesheet" href="Css/desafio.css">
     <link rel="shortcut icon" href="imgs/toyota-prata.png" type="image/x-icon"> 
     <title>Home - Toyota</title>
 </head>
