--- a/home.html
+++ b/home.html
@@ -336,7 +336,7 @@
 <!--Scripts-->
     <script src="js/menuHamburguer.js" type="text/javascript"></script>
 
-    <script src="js/menuModelo.js" type="text/javascript"></script>
+    <script src="menuModelo.js" type="text/javascript"></script>
 <!--/Scripts-->
 
  <!--inicio Script Preloader-->
